# ralph-playbook

./: .gitignore  Anthropic_Just_Killed_All_Your_Agent_Harnesses.md  CLAUDE.md  Claude_Mythos_Changes_Everything.md  README.md  ROADMAP.md  back-pressure.md  gh-back-pressure.md  install.sh  pyproject.toml  uninstall.sh
.claude/commands/: ralph-new-prompt.md
archive/benchmarks/projects/cpp-snake-game/: CONSTRAINTS.md  PRODUCT_SPEC.md
archive/benchmarks/projects/js-recipe-app/: PRODUCT_SPEC.md
archive/benchmarks/projects/rust-csv-tool/: CONSTRAINTS.md  PRODUCT_SPEC.md
benchmarks/: run-bench.sh
benchmarks/dashboard/: index.html
benchmarks/projects/js-recipe-app/: CONSTRAINTS.md
ralph_init/: __init__.py  cli.py
ralph_init.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ralph_init/templates/blank/: gitignore.md
ralph_init/templates/js/: gitignore.md  tsconfig.json.md
ralph_init/templates/rust/: AGENTS.md  PROMPT_build.md  PROMPT_plan.md  main.rs.md
ralph_init/templates/shared/: EVAL_CRITERIA.md  PRODUCT_SPEC.md  PROMPT_build.md  PROMPT_cleanroom.md  PROMPT_eval.md  PROMPT_generate.md  PROMPT_plan.md  PROMPT_rapid_prototype.md  PROMPT_reverse.md  PROMPT_spec.md  cleanroom-loop.sh  format-codex-stream.sh  gitignore_base.md  loop.sh
templates/blank/: AGENTS.md
templates/js/: AGENTS.md
templates/rust/: AGENTS.md  Cargo.toml.md
templates/shared/: PROMPT_build.md  PROMPT_plan.md  PROMPT_spec.md  format-stream.sh  loop.sh
templates/shared/claude-commands/: ralph-new-prompt.md  ralph-spec.md
(+41 files in other folders)
