[project]
name = "ralph-init"
version = "0.1.0"
description = "Bootstrap projects with the Ralph Playbook methodology"
requires-python = ">=3.10"

[project.scripts]
ralph-init = "ralph_init.cli:main"
ralph-upgrade = "ralph_init.cli:upgrade"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ralph_init*"]
