[project]
name = "ralph"
version = "0.4.1"
description = "AI development framework scaffolding and management"
requires-python = ">=3.10"

[project.scripts]
ralph = "ralph_init.cli:main"

[tool.setuptools.package-data]
ralph_init = ["templates/**/*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ralph_init*"]
